k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shisha
  labels:
    app.kubernetes.io/name: shisha
    app.kubernetes.io/managed-by: manual
