k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shisha-backend-mock
  labels:
    app: shisha-backend-mock
spec:
  replicas: 3
  selector:
    matchLabels:
      app: shisha-backend-mock
  template:
      metadata:
        labels:
          app: shisha-backend-mock
      spec:
        containers:
          - name: backend-mock
            image: ricardohdc/shisha-tracker-nextgen-backend-mock:latest
            imagePullPolicy: IfNotPresent
            ports:
              - containerPort: 8080
                name: http
            readinessProbe:
              httpGet:
                path: /api/healthz
                port: http
              initialDelaySeconds: 5
              periodSeconds: 10
              timeoutSeconds: 2
            livenessProbe:
              httpGet:
                path: /api/healthz
                port: http
              initialDelaySeconds: 20
              periodSeconds: 20
              timeoutSeconds: 2
---
apiVersion: v1
kind: Service
metadata:
  name: shisha-backend-mock
  labels:
    app: shisha-backend-mock
spec:
  type: ClusterIP
  selector:
    app: shisha-backend-mock
  ports:
    - name: http
      port: 8080
      targetPort: 8080
