k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shisha-frontend
  labels:
    app: shisha-frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: shisha-frontend
  template:
      metadata:
        labels:
          app: shisha-frontend
      spec:
        containers:
          - name: frontend
            image: ricardohdc/shisha-tracker-nextgen-frontend:latest
            imagePullPolicy: IfNotPresent
            ports:
              - containerPort: 80
                name: http
            readinessProbe:
              httpGet:
                path: /
                port: http
              initialDelaySeconds: 5
              periodSeconds: 10
              timeoutSeconds: 2
            livenessProbe:
              httpGet:
                path: /
                port: http
              initialDelaySeconds: 20
              periodSeconds: 20
              timeoutSeconds: 2
---
apiVersion: v1
kind: Service
metadata:
  name: shisha-frontend
  labels:
    app: shisha-frontend
spec:
  type: ClusterIP
  selector:
    app: shisha-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
