k8s/pocketbase.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shisha-pocketbase
  labels:
    app: shisha-pocketbase
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shisha-pocketbase
  template:
    metadata:
      labels:
        app: shisha-pocketbase
    spec:
      containers:
        - name: pocketbase
          image: docker.io/elestio/pocketbase:v0.30.0
          imagePullPolicy: Always
          securityContext:
            capabilities:
              add: ["NET_BIND_SERVICE"]
          command: ["pocketbase","serve","--http=0.0.0.0:8090","--dir","/pb_data"]
          ports:
            - containerPort: 8090
              name: http
          volumeMounts:
            - name: pb-data
              mountPath: /pb_data
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
      volumes:
        - name: pb-data
          persistentVolumeClaim:
            claimName: shisha-pocketbase-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: shisha-pocketbase
  labels:
    app: shisha-pocketbase
spec:
  type: ClusterIP
  selector:
    app: shisha-pocketbase
  ports:
    - name: http
      port: 8090
      targetPort: http
---
