k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "shisha-ingress"
  namespace: shisha
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: shisha-backend-mock
                port:
                  number: 8080
          - path: /api/healthz
            pathType: Prefix
            backend:
              service:
                name: shisha-backend-mock
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shisha-frontend
                port:
                  number: 80
